data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2065.wast
;; 6. **Test Description:** Create a `block` with a large sequence of `nop` instructions followed by an unrelated instruction without a proper `end` to test instruction context handling.     - **Constraint Checked:** Validates context extension and instruction sequence handling within the block.     - **Infinite Loop Relation:** Lack of proper `end` might cause the execution flow to misinterpret instructions, potentially looping indefinitely.

(assert_invalid
  (module (func $large-nop-sequence-missing-end
    (block (result i32) 
      nop
      nop
      nop
      nop
      ;; (many more nops can be added here)
      i32.const 42
    )
  ))
  "unexpected end of block"
)